# ObjRender

./: .gitignore  CMakeLists.txt  README.md
3rdpart/: CMakeLists.txt
3rdpart/glad/: CMakeLists.txt
3rdpart/glad/include/glad/: glad.h
3rdpart/glad/src/: glad.c
3rdpart/glfw/src/: window.c
3rdpart/imgui/: CMakeLists.txt
assets/: GPU.md
assets/Model_D0208022/: neptune.max
assets/shader/: shader.fs  shader.vs
include/: Application.h  Camera.h  Event.h  Lighting.h  Log.h  Mesh.h  Model.h  ObjLoader.h  Render.h  Shader.h  Texture.h  Window.h  globals.h  stb_image.h  strtool.h
src/: Application.cpp  Camera.cpp  Event.cpp  Lighting.cpp  Mesh.cpp  Model.cpp  ObjLoader.cpp  Render.cpp  Shader.cpp  Texture.cpp  Window.cpp  globals.cpp  main.cpp
